@@ -12,6 +12,7 @@ Changes for 0.5.0:
 * Fixed issue  #7: Function for absolute path to relative path.
 * Fixed issue #11: joinString() fails if first element of list is an empty string.
 * Fixed issue #12: Rename `strReplace()` to `replace()`.
+* Fixed issue #13: Rename `parseValue()` to `parse()`.
 
 Changes for 0.4.1:
 
